GH-10471: Add the lockKey to the channel to control Redis cluster slot hashing
Fixes: https://github.com/spring-projects/spring-integration/issues/10471

As a consequence, change the `ChannelTopic` to a `PatternTopic` to keep receiving subscription events for Pub/Sub lock

* Pass `unLockChannelKey` as `KEYS[2]` instead of `ARGV[2]` as values used as keys should be passed as such

Signed-off-by: Severin Kistler <kistlerseverin@gmail.com>

**Auto-cherry-pick to `6.4.x`**

# Conflicts:
#	spring-integration-redis/src/main/java/org/springframework/integration/redis/util/RedisLockRegistry.java